# friction-shader-plugins

./: CMakeLists.txt  README.md  index.md
.github/workflows/: ci.yml
Generate/3dgrid/: 3dgrid.frag  3dgrid.gre  README.md
Generate/blobs/: README.md  blobs.frag  blobs.gre
Generate/clouds/: README.md  clouds.frag  clouds.gre
Generate/flame/: README.md  flame.frag  flame.gre
Generate/tunnel/: README.md  tunnel.frag  tunnel.gre
Generate/wavelines/: README.md  wavelines.frag
src/: fractal_soup.gre  tunnel.frag  wavelines.gre
